--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             <ul class="etc-links">
                                 <li><a href="https://abstractanuj.github.io/megh/" target="_blank" rel="noopener noreferrer">Megh</a></li>
                                 <li><a href="https://abstractanuj.github.io/hn" target="_blank" rel="noopener noreferrer">The HN Times</a></li>
-                                <li><a href="https://abstractanuj.github.io/graph/" target="_blank" rel="noopener noreferrer">Chaukhat</a></li>
+                                <li><a href="https://abstractanuj.github.io/fn/" target="_blank" rel="noopener noreferrer">Chaukhat</a></li>
                             </ul>
                         </div>
                     </div>
