--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
                     </div>
                     <div class="section-content">
                          <p class="section-intro styled-text-block">
-                            I'm a <span class="text-highlight accent">Packaging Technologist</span> who thrives on bringing <em>ideas to life</em> <img src="https://raw.githubusercontent.com/abstractanuj/abstractanuj.github.io/988766ca04ede9fd43a98fc8219c0621137d5f78/img/life.png" alt="idea icon" class="inline-icon">, whether through structured logic and data or the visual language of design.
+                            I'm a <span class="text-highlight accent">Packaging Technologist</span> who thrives on bringing <em>ideas to life</em> <img src="https://raw.githubusercontent.com/abstractanuj/abstractanuj.github.io/988766ca04ede9fd43a98fc8219c0621137d5f78/img/life.png" alt="idea icon" class="inline-icon">
                         </p>
                         <p class="styled-text-block">
-                           I first fell in love with Packaging when I realized that it had the power to shape the consumer's perception while directly driving the brand's growth. As someone passionate about design thinking and having a background in Mathematics & Statistics, I see Packaging as a powerful means of cost minimization and profit maximization. While others see a box, I see a geometry problem, a logistics puzzle, and a <span class="text-highlight accent">cost-saving opportunity</span>. I use this analytical edge to  <span class="text-highlight">create solutions that are as efficient as they are beautiful.</span>
+                           I first fell in love with Packaging when I realized that it had the power to shape the consumer's perception while directly driving the brand's growth.      </p>
+                        <p class="styled-text-block">
+                            As someone passionate about design thinking and having a background in Mathematics & Statistics, I see Packaging as a powerful means of cost minimization and profit maximization. While others see a box, I see a geometry problem, a logistics puzzle, and a <span class="text-highlight accent">cost-saving opportunity</span>. I use this analytical edge to  <span class="text-highlight">create solutions that are as efficient as they are beautiful.</span>
                         </p>
                     </div>
                 </section>
