--- a/index.html
+++ b/index.html
@@ -776,13 +776,11 @@
                 </div>
                 <p>
                     I see <strong>Packaging</strong> as a powerful means of <strong>cost minimization</strong> and <strong>profit maximization</strong>.
-                </p>
                 <p>
-                    I use <strong>analytical thinking</strong> to incorporate my <strong>chain of thought</strong> with <strong>material selection</strong>, <strong>testing</strong>, <strong>costing</strong> and <strong>design</strong>.
+                    To incorporate my <strong>chain of thought</strong> that connects <strong>material selection</strong>, <strong>testing</strong>, <strong>costing</strong> and <strong>design</strong>.
                 </p>
-                <p>
-                    I first fell in love with Packaging when I realized that it had the power to shape the consumer's perception while directly driving the <strong>brand's growth</strong>.
                 </p>
+               
             </section>
 
             <!-- Motto Section -->
