--- a/index.html
+++ b/index.html
@@ -776,9 +776,11 @@
                 </div>
                 <p>
                     I see <strong>Packaging</strong> as a powerful means of <strong>cost minimization</strong> and <strong>profit maximization</strong>.
-                <p>
-                    To incorporate my <strong>chain of thought</strong> that connects <strong>material selection</strong>, <strong>testing</strong>, <strong>costing</strong> and <strong>design</strong>.
-                </p>
+                <br>
+                    To think, build and iterate upon my <strong>chain of thought</strong> that connects <strong>material selection</strong>, <strong>testing</strong>, <strong>costing</strong> and <strong>design</strong>.
+                    <p>
+                         I bring a unique blend of analytical thinking and consumer insight.
+                    </p>
                 </p>
                
             </section>
@@ -790,7 +792,7 @@
                     <h2 class="section-title">Motto</h2>
                 </div>
                 <p class="large-text">
-                    I aim to gain meaningful <strong>hands-on</strong> and <strong>professional exposure</strong>. Create <strong>vibrant solutions</strong>, whilst bringing a fresh perspective and creative ideas to the table.
+                    At workplace, I aim to gain meaningful <strong>hands-on</strong> and <strong>professional exposure</strong>. Create <strong>vibrant solutions</strong>, whilst bringing a fresh perspective and creative ideas to the table.
                 </p>
             </section>
 
