--- a/writing.html
+++ b/writing.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Writing | Anuj Singh</title>
-    <link rel="icon" href="https://files.catbox.moe/smrx82.ico">
+    <link rel="icon" href="https://files.catbox.moe/74m0db.ico">
     <!-- Import Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
